--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ li.nav-link{
     font-weight: 300;
 }
 
-.content{
+.hero{
     display: flex;
     width: 100%;
 }
@@ -102,6 +102,7 @@ button:hover{
 
 .image-wrapper{
     display: flex;
+    justify-content: center;
     margin-top: 5vh;
     position: relative;
 }
@@ -111,7 +112,7 @@ button:hover{
 }
 
 @media screen and (max-width: 1075px) {
-    .content{
+    .hero{
         flex-direction: column;
     }
 }
